# ZONES

./: .gitattributes  .gitignore  Dockerfile  README.md  Telegram.py  ZONES.spec  db.py  docker-compose.yml  docker-start.sh  ff_calendar_thisweek.xml  index.rst  pyproject.toml  requirements.txt  setup.py  trade.py  zones.py  zones_ea.py
.github/workflows/: docker-publish.yml  python-app.yml  python-publish.yml
MQL4/Experts/: ZONES.mq4
MQL4/Experts/Zones/: Zones.ex4  Zones.mq4  sever.ex4  sever.mq4
MQL4/Files/DWX/: DWX_Historic_Trades.csv  DWX_Orders.txt
MQL4/Files/zones/: DWX_Historic_Trades.csv  DWX_Messages_Stored.txt  DWX_Orders_Stored.txt  account_info.csv  bar_data.csv  history_data.csv  tick_data.csv
MQL4/Include/: websocket.mqh
MQL4/Include/DiscordTelegram/: CMybot.mqh
MQL4/Indicators/: ATR.ex4  Accelerator.ex4  Alligator.ex4  Awesome.ex4  Bands.ex4  Heiken Ashi.ex4  Ichimoku.ex4  Momentum.ex4  Parabolic.ex4  RSI.ex4  Stochastic.ex4  ZigZag.ex4
MQL4/Indicators/Examples/SimplePanel/: SimplePanel.ex4
MQL4/Presets/: setting.set
MQL4/Scripts/: PeriodConverter.ex4
MQL4/Scripts/Examples/Pipes/: PipeClient.ex4  PipeClientPure.ex4
MT4/Experts/Zones/: Zones.mq4
MT4/Files/: B3USDCAD_60_tradeexpert.csv  B3USDCAD_60_zones_ea.csv  News.txt
MT4/Libraries/: api.mq4  stdlib.mq4  try.mq4
News/: news_.xml  news_9.xml
ZONES.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
app/: ZONES.py
app/MQL4/Experts/: MACD Sample.ex4  Moving Average.ex4  ZONES.ex4
app/MQL4/Include/: ZonesBridge.mqh
app/MQL4/Indicators/: Accumulation.ex4  Bears.ex4  Bulls.ex4  CCI.ex4  Custom Moving Averages.ex4  MACD.ex4  OsMA.ex4  iExposure.ex4
app/MQL4/Libraries/: stdlib.ex4
app/MQL4/Scripts/Examples/DLL/: DLLSampleTester.ex4
app/docs/: INSTALL.md  TROUBLESHOOTING.md  chart_terminal.md
app/src/: benford's law.py  version.py
app/src/News/: news.py
app/src/execution/: Telegram.py  kill_switch.py  security.py  system_state.py
app/src/learning/: learning.py
app/src/logger/: logger.py
app/src/routes/: api.py
app/src/server/: dashboard_server.py  engine_config.py  server_controller.py  websocket_bridge.py
docs/: GITHUB_RELEASE_CHECKLIST.md  RELEASE.md  backtesting.md  chart_terminal.md  installation_package.md  mt4-python-architecture.md  runtime_settings.md
env/Scripts/: activate
installer/: ZONES.iss
scripts/: build_release.ps1
src/: DwxClient.py  Telegram.py  Trade.py  __init__.py  app_paths.py  bridge.py  database.py  db.py  models.py  portfolio.py  requirements.txt  server.py  tickprocessor.py  trade.py  trained_model.pkl  zmq_connector.py
src/Exchanges/: CoinbasePro.py
src/MetaTrader_Helpers/Data_Processing/: DWX_HISTORY_IO_v2_0_1_RC8.py
src/MetaTrader_Helpers/Report_Conversion/MT_TO_PYTHON/: DWX_MT_TO_PYTHON_v2_RC4.py
src/News/: news.py
src/STRATEGIES/: coin_flip_traders_v1.0.py
src/STRATEGIES/BASE/: DWZ_ZMQ_Strategy.py
src/TEMPLATE/MODULES/: DwxZmqExecution.py  DwxZmqReporting.py
src/db/: db.py
src/db/repository/: learning_repository.py
src/docs_xml/News/: ff_calendar_thisweek.xml
src/execution/: audit.py  backtesting.py  metrics.py  portfolio.py  system_state.py  trade.py
src/learning/: learning.py
src/modules/: DwxZmqExecution.py  DwxZmqReporting.py
src/pipe_server/: Telegram.py  name_pipe_server.py
src/routes/: api.py
src/server/: bridge.py  dashboard_server.py  draw  server.py  server_controller.py  websocket_bridge.py
src/ui/: News.py  about.py  account.py  candle_stick_chart.py  forgot_password.py  home.py  login.py  register.py  reset_password.py  services.py  statistics.py  trading.py
tests/: test_app_paths.py  test_backtesting.py  test_bridge_service.py  test_dashboard_server.py
